data/derived/sp14/progs/unify/prog2325.ml.out
Characters 58-66:
  | h :: t -> concat t @  h;;
              ^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
